# api/src/main/resources/openapi.yaml
@@ -188,25 +188,25 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/TopicResponse'
+                $ref: '#/components/schemas/NotificationResponse'
         401:
           description: Not Authenticated
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/TopicResponse'
+                $ref: '#/components/schemas/NotificationResponse'
         403:
           description: Not Authorized
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/TopicResponse'
+                $ref: '#/components/schemas/NotificationResponse'
         500:
           description: Internal Error
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/TopicResponse'
+                $ref: '#/components/schemas/NotificationResponse'
     delete:
       tags:
       - topics
@@ -226,6 +226,89 @@ paths:
           '*/*':
             schema:
               $ref: '#/components/schemas/CreateNotificationRequest'
+      responses:
+        200:
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/TapisResponse'
+        401:
+          description: Not Authenticated
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/TapisResponse'
+        403:
+          description: Not Authorized
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/TapisResponse'
+        500:
+          description: Internal Error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/TapisResponse'
+  /v3/notifications/topics:
+    get:
+      tags:
+      - topics
+      summary: Get a list of all topics available to you.
+      operationId: getTopics
+      parameters:
+      - name: limit
+        in: query
+        description: pagination limit
+        schema:
+          type: integer
+          format: int32
+          default: 1000
+        example: 100
+      - name: offset
+        in: query
+        description: pagination offset
+        schema:
+          type: integer
+          format: int64
+          default: 0
+        example: 1000
+      responses:
+        200:
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/TopicListResponse'
+        401:
+          description: Not Authenticated
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/TopicListResponse'
+        403:
+          description: Not Authorized
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/TopicListResponse'
+        500:
+          description: Internal Error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/TopicListResponse'
+    post:
+      tags:
+      - topics
+      summary: Create a new topic to publish message to
+      operationId: createTopic
+      requestBody:
+        content:
+          '*/*':
+            schema:
+              $ref: '#/components/schemas/CreateTopicRequest'
       responses:
         200:
           description: OK
@@ -271,25 +354,25 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/TopicResponse'
+                $ref: '#/components/schemas/SubscriptionListResponse'
         401:
           description: Not Authenticated
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/TopicResponse'
+                $ref: '#/components/schemas/SubscriptionListResponse'
         403:
           description: Not Authorized
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/TopicResponse'
+                $ref: '#/components/schemas/SubscriptionListResponse'
         500:
           description: Internal Error
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/TopicResponse'
+                $ref: '#/components/schemas/SubscriptionListResponse'
     post:
       tags:
       - subscriptions
@@ -314,25 +397,25 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/TopicResponse'
+                $ref: '#/components/schemas/TopicListResponse'
         401:
           description: Not Authenticated
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/TopicResponse'
+                $ref: '#/components/schemas/TopicListResponse'
         403:
           description: Not Authorized
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/TopicResponse'
+                $ref: '#/components/schemas/TopicListResponse'
         500:
           description: Internal Error
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/TopicResponse'
+                $ref: '#/components/schemas/TopicListResponse'
   /v3/notifications/topics/{topicId}/subscriptions/{subscriptionId}:
     get:
       tags:
@@ -360,25 +443,25 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/TopicResponse'
+                $ref: '#/components/schemas/TopicListResponse'
         401:
           description: Not Authenticated
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/TopicResponse'
+                $ref: '#/components/schemas/TopicListResponse'
         403:
           description: Not Authorized
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/TopicResponse'
+                $ref: '#/components/schemas/TopicListResponse'
         500:
           description: Internal Error
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/TopicResponse'
+                $ref: '#/components/schemas/TopicListResponse'
     delete:
       tags:
       - subscriptions
@@ -405,108 +488,25 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/TopicResponse'
+                $ref: '#/components/schemas/TapisResponse'
         401:
           description: Not Authenticated
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/TopicResponse'
+                $ref: '#/components/schemas/TapisResponse'
         403:
           description: Not Authorized
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/TopicResponse'
+                $ref: '#/components/schemas/TapisResponse'
         500:
           description: Internal Error
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/TopicResponse'
-  /v3/notifications/topics:
-    get:
-      tags:
-      - topics
-      summary: Get a list of all topics available to you.
-      operationId: getTopics
-      parameters:
-      - name: limit
-        in: query
-        description: pagination limit
-        schema:
-          type: integer
-          format: int32
-          default: 1000
-        example: 100
-      - name: offset
-        in: query
-        description: pagination offset
-        schema:
-          type: integer
-          format: int64
-          default: 0
-        example: 1000
-      responses:
-        200:
-          description: OK
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/TopicResponse'
-        401:
-          description: Not Authenticated
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/TopicResponse'
-        403:
-          description: Not Authorized
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/TopicResponse'
-        500:
-          description: Internal Error
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/TopicResponse'
-    post:
-      tags:
-      - topics
-      summary: Create a new topic to publish message to
-      operationId: createTopic
-      requestBody:
-        content:
-          '*/*':
-            schema:
-              $ref: '#/components/schemas/CreateTopicRequest'
-      responses:
-        200:
-          description: OK
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/TopicResponse'
-        401:
-          description: Not Authenticated
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/TopicResponse'
-        403:
-          description: Not Authorized
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/TopicResponse'
-        500:
-          description: Internal Error
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/TopicResponse'
+                $ref: '#/components/schemas/TapisResponse'
   /application.wadl:
     get:
       operationId: getWadl
@@ -561,7 +561,10 @@ components:
         description:
           type: string
         schema:
-          type: string
+          type: object
+          additionalProperties:
+            type: object
+            description: A valid JSON schema
           description: A valid JSON schema
     TapisResponseTopic:
       type: object
@@ -590,19 +593,6 @@ components:
         description:
           type: string
           description: An informative description
-    TapisResponseListTopic:
-      type: object
-      properties:
-        status:
-          type: string
-        message:
-          type: string
-        result:
-          type: array
-          items:
-            $ref: '#/components/schemas/Topic'
-        version:
-          type: string
     TapisResponseString:
       type: object
       properties:
@@ -621,7 +611,139 @@ components:
       properties:
         body:
           type: string
+    TapisResponseListTopic:
+      type: object
+      properties:
+        status:
+          type: string
+        message:
+          type: string
+        result:
+          type: array
+          items:
+            $ref: '#/components/schemas/Topic'
+        version:
+          type: string
+    Notification:
+      required:
+      - data
+      - source
+      - specversion
+      - subject
+      - tenant
+      - time
+      - type
+      - uuid
+      type: object
+      properties:
+        specversion:
+          type: string
+        uuid:
+          type: string
+          format: uuid
+        tenant:
+          type: string
+        time:
+          type: integer
+          format: int64
+        source:
+          type: string
+        data:
+          type: object
+        subject:
+          type: string
+        type:
+          type: string
+    NotificationResponse:
+      type: object
+      properties:
+        status:
+          type: string
+        message:
+          type: string
+        result:
+          $ref: '#/components/schemas/Notification'
+        version:
+          type: string
     TopicResponse:
+      type: object
+      properties:
+        status:
+          type: string
+        message:
+          type: string
+        result:
+          $ref: '#/components/schemas/Topic'
+        version:
+          type: string
+    NotificationMechanism:
+      type: object
+      properties:
+        mechanism:
+          type: string
+          enum:
+          - WEBHOOK
+          - EMAIL
+          - QUEUE
+          - ACTOR
+        target:
+          type: string
+        subscriptionId:
+          type: integer
+          format: int32
+        created:
+          type: integer
+          format: int64
+        uuid:
+          type: string
+          format: uuid
+        tenantId:
+          type: string
+    Subscription:
+      type: object
+      properties:
+        id:
+          type: integer
+          format: int32
+        uuid:
+          type: string
+          format: uuid
+        filters:
+          type: object
+          additionalProperties:
+            type: object
+        created:
+          type: string
+          format: date-time
+        mechanisms:
+          type: array
+          items:
+            $ref: '#/components/schemas/NotificationMechanism'
+    SubscriptionListResponse:
+      type: object
+      properties:
+        status:
+          type: string
+        message:
+          type: string
+        result:
+          type: array
+          items:
+            $ref: '#/components/schemas/Subscription'
+        version:
+          type: string
+    TapisResponse:
+      type: object
+      properties:
+        status:
+          type: string
+        message:
+          type: string
+        result:
+          type: object
+        version:
+          type: string
+    TopicListResponse:
       type: object
       properties:
         status:
@@ -645,19 +767,3 @@ components:
           type: array
           items:
             $ref: '#/components/schemas/NotificationMechanism'
-    NotificationMechanism:
-      required:
-      - mechanism
-      type: object
-      properties:
-        mechanism:
-          type: string
-          enum:
-          - WEBHOOK
-          - EMAIL
-          - QUEUE
-          - ACTOR
-        webhookURL:
-          type: string
-        emailAddress:
-          type: string
