# lib/src/main/java/edu/utexas/tacc/tapis/notifications/lib/models/NotificationMechanism.java
@@ -1,103 +1,80 @@
 package edu.utexas.tacc.tapis.notifications.lib.models;
 
-import org.hibernate.validator.constraints.URL;
+import org.apache.commons.validator.routines.EmailValidator;
+import org.apache.commons.validator.routines.UrlValidator;
 
-import javax.annotation.Nullable;
-import javax.validation.ConstraintViolation;
-import javax.validation.ConstraintViolationException;
-import javax.validation.Validation;
-import javax.validation.Validator;
-import javax.validation.constraints.AssertTrue;
-import javax.validation.constraints.Email;
-import javax.validation.constraints.NotNull;
-import java.util.HashSet;
-import java.util.Set;
+import javax.validation.ValidationException;
+import java.time.Instant;
+import java.util.UUID;
 
 public class NotificationMechanism {
-    
-    private final NotificationMechanismEnum mechanism;
-    private final String webhookURL;
-    private final String emailAddress;
-    
-    public NotificationMechanism(Builder builder){
-        this.mechanism = builder.mechanism;
-        this.emailAddress = builder.emailAddress;
-        this.webhookURL = builder.webhookURL;
+
+    private NotificationMechanismEnum mechanism;
+    private String target;
+    private int subscriptionId;
+    private Instant created;
+    private UUID uuid;
+    private String tenantId;
+
+    public NotificationMechanism(){}
+
+    public NotificationMechanism(NotificationMechanismEnum mechanism, String target) throws ValidationException {
+        this.mechanism = mechanism;
+        this.target = target;
+        validate();
     }
 
-    public static class Builder {
-
-        private NotificationMechanismEnum mechanism;
-        private String webhookURL;
-        private String emailAddress;
-
-        private static final Validator validator = Validation.buildDefaultValidatorFactory().getValidator();
-
-        public Builder setMechanism(NotificationMechanismEnum mechanism) {
-            this.mechanism = mechanism;
-            return this;
+    private void validate() throws ValidationException {
+        EmailValidator emailValidator = EmailValidator.getInstance();
+        UrlValidator urlValidator = UrlValidator.getInstance();
+        if ((this.mechanism == NotificationMechanismEnum.EMAIL) && (!(emailValidator.isValid(this.target)))) {
+            throw new ValidationException("Invalid email");
         }
 
-        public Builder setEmailAddress(String emailAddress) {
-            this.emailAddress = emailAddress;
-            return this;
-        }
-
-        public Builder setWebhookURL(String webhookURL) {
-            this.webhookURL = webhookURL;
-            return this;
-        }
-
-        public NotificationMechanism build() {
-
-            NotificationMechanism noteMech = new NotificationMechanism(this);
-            Set<ConstraintViolation<NotificationMechanism>> violations =
-                validator.validate(noteMech);
-
-            if (!violations.isEmpty()) {
-                throw new ConstraintViolationException(
-                    new HashSet<ConstraintViolation<?>>(violations));
-            }
-            return noteMech;
+        if ((this.mechanism == NotificationMechanismEnum.WEBHOOK) && (!(urlValidator.isValid(this.target)))) {
+            throw new ValidationException("Invalid URL");
         }
     }
 
-
-    /**
-     * The validation api allows this AssertTrue, they MUST start with `is`
-     * @return
-     */
-    @AssertTrue
-    private boolean isValid() {
-        if (mechanism.equals(NotificationMechanismEnum.EMAIL) && emailAddress == null) return false;
-        if (mechanism.equals(NotificationMechanismEnum.WEBHOOK) && webhookURL == null) return false;
-        return true;
-    }
-
-    @NotNull
     public NotificationMechanismEnum getMechanism() {
-        return this.mechanism;
+        return mechanism;
+    }
+
+    public String getTarget() {
+        return target;
+    }
+
+    public int getSubscriptionId() {
+        return subscriptionId;
+    }
+
+    public void setSubscriptionId(int subscriptionId) {
+        this.subscriptionId = subscriptionId;
+    }
+
+    public Instant getCreated() {
+        return created;
+    }
+
+    public void setCreated(Instant created) {
+        this.created = created;
+    }
+
+    public UUID getUuid() {
+        return uuid;
+    }
+
+    public void setUuid(UUID uuid) {
+        this.uuid = uuid;
+    }
+
+    public String getTenantId() {
+        return tenantId;
+    }
+
+    public void setTenantId(String tenantId) {
+        this.tenantId = tenantId;
     }
 
 
-    @Nullable
-    @Email
-    public String getEmailAddress() {
-        return this.emailAddress;
-    }
-
-    @Nullable
-    @URL
-    public String getWebhookURL() {
-        return this.webhookURL;
-    }
-
-    @Override
-    public String toString() {
-        return "NotificationMechanism{" +
-            "mechanism='" + mechanism + '\'' +
-            ", webhookURL='" + webhookURL + '\'' +
-            ", emailAddress='" + emailAddress + '\'' +
-            '}';
-    }
 }
